force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Auto_Number__c</fullName>
    <label>Custom Auto Number</label>
    <type>AutoNumber</type>
</CustomField>