force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Number__c</fullName>
    <label>Custom Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>