force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_Percent__c.field-meta.xml
<CustomField>
    <fullName>Custom_Percent__c</fullName>
    <label>Custom Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>