force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Custom_Picklist__c</fullName>
    <label>Custom Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>