force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_Text_Long__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text_Long__c</fullName>
    <label>Custom Text Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>