force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_Text_Rich__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text_Rich__c</fullName>
    <label>Custom Text Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>