force-app/main/default/objects/TASKRAY__Project__c/fields/Custom_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL__c</fullName>
    <label>Custom URL</label>
    <type>Url</type>
</CustomField>